# audio_socket

./: .dockerignore  Dockerfile  README.md  doppler.yaml  env.example  pyproject.toml
.github/workflows/: ci.yml
audio_socket_api/: __init__.py  main.py
audio_socket_api/static/: index.html  websocket.js
tests/: README.md  __init__.py  conftest.py  test_basic.py  test_integration.py  test_websocket.py
