[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audio-socket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "websockets==12.0",
    "openai==1.3.7",
    "python-multipart==0.0.6",
    "pydantic==2.5.0",
    "python-dotenv==1.0.0",
    "aiofiles==23.2.1",
    "requests==2.31.0",
    "websockets==12.0",
    "loguru>=0.7.3",
    "pytest>=8.4.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "websockets>=12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["audio_socket_api"]
